--- a/app/assets/javascripts/templates/references/new.handlebars
+++ b/app/assets/javascripts/templates/references/new.handlebars
@@ -1,2 +1,2 @@
 {{#linkTo 'references'}}References{{/linkTo}}
-{{view Ember.TextField placeholder="Isaiah 40:8" valueBinding="passage" action="passageQuery"}}
+{{view Ember.TextField placeholder="Isaiah 40:8" valueBinding="passage" action="lookup"}}
