Significantly decrease amount of code after better understanding of Ember.

--- a/app/assets/javascripts/templates/reference.handlebars
+++ b/app/assets/javascripts/templates/reference.handlebars
@@ -1,4 +1,4 @@
-{{#linkTo 'references'}}References{{/linkTo}}
+{{#linkTo 'references'}}Back{{/linkTo}}
 
 <div class="reference_html">
   {{{html}}}
