Basic style start

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,1 +1,13 @@
 @import 'normalize'
+
+body
+  font-family: "Helvetica Neue", sans-serif
+  line-height: 1.5
+  margin: 1em
+  color: #202020
+  text-shadow: -1px 1px 1px #efefef
+
+.esv-text
+  .verse-num, .chapter-num
+    display: none
+
