--- a/app/views/layouts/batman.html.slim
+++ b/app/views/layouts/batman.html.slim
@@ -7,5 +7,9 @@ html
     = javascript_include_tag "scabbard"
     = csrf_meta_tags
   body
+    div data-yield="main"
     noscript
       = yield
+
+    javascript:
+      Scabbard.run();
