--- a/app/assets/batman/html/references/index.html.slim
+++ b/app/assets/batman/html/references/index.html.slim
@@ -3,6 +3,7 @@ form data-formfor-lookup="lookup" data-event-submit="performLookup"
   .errors
 
 ul
+  li data-showif="references.length | not" No references yet
   li data-foreach-reference="references"
     a data-bind="reference.title" data-route="routes.references[reference]"
     a data-event-click="deleteReference | withArguments reference" &times;
