--- a/app/assets/batman/html/references/index.html.slim
+++ b/app/assets/batman/html/references/index.html.slim
@@ -1,6 +1,6 @@
 form data-formfor-lookup="lookup" data-event-submit="performLookup"
   input type="text" data-bind="lookup.passage" data-bind-disabled="lookup.performing"
-  input type="submit" value="Search" data-bind-disabled="lookup.performing"
+  .notice: ul data-showif="lookup.performing": li Searching...
   .errors
 
 div data-view="ReferencesListView"
