Preload views helper in danott/batman-rails

--- a/app/views/layouts/batman.html.slim
+++ b/app/views/layouts/batman.html.slim
@@ -10,6 +10,6 @@ html
     div data-yield="main"
       noscript
         = yield
-
+    = batman_define_views
     javascript:
       Scabbard.run();
