--- a/app/assets/batman/html/references/index.html.slim
+++ b/app/assets/batman/html/references/index.html.slim
@@ -9,4 +9,4 @@ div data-view="ReferencesListView"
     li data-showif="references.length | not" No references yet
     li data-foreach-reference="references" data-view="ReferencesListItemView"
       a data-bind="reference.title" data-route="routes.references[reference]"
-      a data-showif="editing" data-event-click="deleteReference | withArguments reference" &times;
+      a data-showif="editing" data-event-click="deleteReference" &times;
