--- a/app/assets/batman/html/passages/index.html.slim
+++ b/app/assets/batman/html/passages/index.html.slim
@@ -1,6 +1,6 @@
-form data-formfor-lookup="lookup" data-event-submit="performLookup"
-  input type="text" data-bind="lookup.passage" data-bind-disabled="lookup.performing"
-  .notice: ul data-showif="lookup.performing": li Searching...
+form data-formfor-passageQuery="passageQuery" data-event-submit="performPassageQuery"
+  input type="text" data-bind="passageQuery.queryString" data-bind-disabled="passageQuery.performing"
+  .notice: ul data-showif="passageQuery.performing": li Searching...
   .errors
 
 div data-view="PassagesListView"
