--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,3 +10,16 @@ body
 .esv-text
   .verse-num, .chapter-num
     display: none
+
+a
+  color: inherit
+  text-decoration: none
+
+.passages-list
+  list-style-type: none
+  padding-left: 0
+
+  li
+    padding: 0.5rem 0
+    &:nth-child(n+3)
+      border-top: 1px solid #eaeaea
