--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,12 +4,8 @@ html
     title Scabbard
     meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'
     = stylesheet_link_tag "application", media: "all"
-    = javascript_include_tag "scabbard"
+    = javascript_include_tag "application"
     = csrf_meta_tags
   body
-    div data-yield="main"
-      noscript
-        = yield
-
-    javascript:
-      Scabbard.run();
+    div
+      = yield
