--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype 5
-html
+html manifest=(cache_path(format: 'manifest') if offline_enabled?)
   head
     title Scabbard
     meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'
