--- a/app/views/passages/index.html.erb
+++ b/app/views/passages/index.html.erb
@@ -1,3 +1,11 @@
+<nav>
+  <ul>
+    <li><%= button_to "Sign out", session_path, method: :delete %></li>
+    <li><%= link_to "Edit account", edit_person_path %></li>
+    <li><%= link_to "Add a passage", new_passage_path %></li>
+  </ul>
+</nav>
+
 <ul>
   <%= render @passages %>
-  </ul>
+</ul>
