--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -8,6 +8,10 @@
 
 <%= form_for @person, url: person_path do |f| %>
   <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div>
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
