--- a/app/views/layouts/headers/_person.html.erb
+++ b/app/views/layouts/headers/_person.html.erb
@@ -2,7 +2,7 @@
 
 <nav>
   <ul>
-    <li><%= button_to "Sign out", session_path, method: :delete %></li>
+    <li><%= link_to "Sign out", sign_out_path %></li>
     <li><%= link_to "Edit account", edit_person_path %></li>
   </ul>
 </nav>
