--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign up</h1>
 
-<p><%= link_to "Sign in", new_session_path %></p>
+<p><%= link_to "Sign in", sign_in_path %></p>
 
 <% @person.errors.full_messages.each do |message| %>
   <p>Error: <%= message %></p>
