--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,7 +2,7 @@
 @import 'normalize'
 
 body
-  font-family: "Helvetica Neue", sans-serif
+  font-family: "Comic Neue", sans-serif
   line-height: 1.5
   margin: 1em
   color: #202020
@@ -10,16 +10,3 @@ body
 .esv-text
   .verse-num, .chapter-num
     display: none
-
-a
-  color: inherit
-  text-decoration: none
-
-.passages-list
-  list-style-type: none
-  padding-left: 0
-
-  li
-    padding: 0.5rem 0
-    &:nth-child(n+3)
-      border-top: 1px solid #eaeaea
