--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,3 +1,7 @@
+<p>
+  <%= link_to "Passages", passages_path %>
+</p>
+
 <h1>Signed in as <%= @person.email %></h1>
 
 <% flash.each do |key, value| %>
