Add a submit button

--- a/app/views/passages/new.html.erb
+++ b/app/views/passages/new.html.erb
@@ -10,4 +10,5 @@
 
 <%= form_tag passages_path do %>
   <%= text_field_tag :query_string, nil, placeholder: "Isa 40:8" %>
+  <%= submit_tag "Search" %>
 <% end %>
