--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="<%= cache_path(format: 'manifest') if offline_enabled? %>">
+<html>
   <head>
     <title>Scabbard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
