--- a/app/views/passages/show.html.erb
+++ b/app/views/passages/show.html.erb
@@ -3,4 +3,4 @@
 </p>
 
 <%= @passage.html %>
-<%= button_to "Remove", passage_path(@passage), method: :delete %>
+<%= button_to "Remove", passage_path(@passage), method: "delete", remote: true %>
