--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -10,7 +10,7 @@
 
 <h2>Change name</h2>
 
-<%= form_for @person, url: person_url do |f| %>
+<%= form_for @person, url: person_url, remote: true do |f| %>
   <div>
     <%= f.label :name %>
     <%= f.text_field :name %>
@@ -22,7 +22,7 @@
 
 <h2>Change password</h2>
 
-<%= form_for @person, url: person_url do |f| %>
+<%= form_for @person, url: person_url, remote: true do |f| %>
   <div>
     <%= f.label :current_password %>
     <%= f.password_field :current_password %>
@@ -42,4 +42,4 @@
 
 <h2>Delete account</h2>
 
-<%= button_to "Delete account", person_url, method: :delete %>
+<%= button_to "Delete account", person_url, method: :delete, remote: true %>
